--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Kategórie</a>
+                        <a class="nav-link" aria-current="page" href="categories.html">Kategórie</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
