--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" defer></script>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-sm fixed-top bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand textLogo" href="#">BAZARIK</a>
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center text-md-start">
+    <footer class="bg-light mt-auto text-center text-md-start">
         <div class="container my-1 py-2">
             <div class="row">
                 <div class="col-lg-6 col-md-12 mb-md-0">
