--- a/categories.html
+++ b/categories.html
@@ -35,30 +35,226 @@
 </nav>
 
 <div class="container" id="main-container">
-  <div class="container marketing">
-    <div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+  <div class="container" id="category">
+    <div class="row mt-3">
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+          <ul class="list-group">
+            <li>Kosele, Obleky, Saka</li>
+            <li>Doplnky a sperky</li>
+            <li>Kabelky, tasky, ruksaky</li>
+            <li>Saty, kostymy</li>
+          </ul>
+          <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
 
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+    <div class="row mt-3">
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
 
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+    <div class="row mt-3">
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
 
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+    <div class="row mt-3">
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+        </div>
+        <h2 class="fw-normal">Moda</h2>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
   </div>
 </div>
 
