categories almost done

--- a/categories.html
+++ b/categories.html
@@ -37,11 +37,11 @@
 <div class="container" id="main-container">
   <div class="container" id="category">
     <div class="row mt-3">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
           <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Moda</h4>
           <ul class="list-group">
             <li>Kosele, Obleky, Saka</li>
             <li>Doplnky a sperky</li>
@@ -50,11 +50,108 @@
           </ul>
           <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/children.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Pre deti</h4>
+        <ul class="list-group">
+          <li>Detske oblecenie</li>
+          <li>Hracky a hry</li>
+          <li>Kociky, postielky</li>
+          <li>Autosedacky</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/furniture.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Nabytok a domacnost</h4>
+        <ul class="list-group">
+          <li>Kuchyna</li>
+          <li>Spalna</li>
+          <li>Obyvacka</li>
+          <li>Detska izba</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/home.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Zahrada a dielna</h4>
+        <ul class="list-group">
+          <li>Stavba</li>
+          <li>Dielna</li>
+          <li>Zahrada</li>
+          <li>Ostatne z domu</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/sport.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Sport</h4>
+        <ul class="list-group">
+          <li>Bicykle</li>
+          <li>Zimne sporty</li>
+          <li>Rybolov</li>
+          <li>Raketove sporty</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/computer.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Pocitace</h4>
+        <ul class="list-group">
+          <li>Pocitace, notebooky</li>
+          <li>Monitory</li>
+          <li>Pocitacove hry</li>
+          <li>Komponenty a prislusenstvo</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/vehicle.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Auto-moto</h4>
+        <ul class="list-group">
+          <li>Auta</li>
+          <li>Motorky a skutre</li>
+          <li>Pneumatiky</li>
+          <li>Elektrony a disky</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/electronic.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Elektronika</h4>
+        <ul class="list-group">
+          <li>Elektricke spotrebice</li>
+          <li>Tablety</li>
+          <li>TV</li>
+          <li>Audio, video</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/mobile.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Mobil</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -63,11 +160,11 @@
         </ul>
         <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/entertainment.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Hudba & filmy</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -76,11 +173,24 @@
         </ul>
         <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/realEstate.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Reality</h4>
+        <ul class="list-group">
+          <li>Kosele, Obleky, Saka</li>
+          <li>Doplnky a sperky</li>
+          <li>Kabelky, tasky, ruksaky</li>
+          <li>Saty, kostymy</li>
+        </ul>
+        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="category-image-div">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/service.png" alt="Test">
+        </div>
+        <h4 class="fw-normal mt-2">Sluzby</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -92,11 +202,11 @@
     </div>
 
     <div class="row mt-3">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/antique.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Starozitnosti a umenie</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -105,11 +215,11 @@
         </ul>
         <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/handmade.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Handmade</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -118,11 +228,11 @@
         </ul>
         <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/animal.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Chovatelske potreby</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
@@ -131,121 +241,11 @@
         </ul>
         <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-6">
         <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
+          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/other.png" alt="Test">
         </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="row mt-3">
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="row mt-3">
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
-        <ul class="list-group">
-          <li>Kosele, Obleky, Saka</li>
-          <li>Doplnky a sperky</li>
-          <li>Kabelky, tasky, ruksaky</li>
-          <li>Saty, kostymy</li>
-        </ul>
-        <p><a class="btn btn-secondary mt-1" href="category.html">Viac &raquo;</a></p>
-      </div>
-      <div class="col-lg-3">
-        <div class="category-image-div">
-          <img src="https://d3s6lmhodxwlnt.cloudfront.net/images/categoryTransparent/fashion.png" alt="Test">
-        </div>
-        <h2 class="fw-normal">Moda</h2>
+        <h4 class="fw-normal mt-2">Ostatne</h4>
         <ul class="list-group">
           <li>Kosele, Obleky, Saka</li>
           <li>Doplnky a sperky</li>
